--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src https://accounts.google.com/gsi/client; frame-src https://accounts.google.com/gsi/; connect-src https://accounts.google.com/gsi/;"
+      content="script-src https://accounts.google.com/gsi/client https://e-commerce-xkhk.onrender.com;"
     />
+
     <link rel="icon" type="image/svg+xml" href="/store.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-commerce</title>
